--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -727,6 +727,209 @@
    "cell_type": "markdown",
    "id": "8a834f54",
    "metadata": {},
+   "source": [
+    "Let's remember the different expressions we found in the previous notebook with the log-loss function:\n",
+    "\n",
+    "$$\n",
+    "\\left[\\frac{\\partial \\mathcal{L}}{\\partial w_1}=-\\frac{x_1}{m} \\sum_i\\left(y_i-a_{i}\\right)\\right]\n",
+    "$$\n",
+    "$$\n",
+    "\\left[\\frac{\\partial \\mathcal{L}}{\\partial w_2}=-\\frac{x_2}{m} \\sum_i\\left(y_i-a_{i}\\right)\\right]\n",
+    "$$\n",
+    "$$\n",
+    "\\left[\\frac{\\partial \\mathcal{L}}{\\partial b}=-\\frac{1}{m} \\sum_i\\left(y_i-a_{i}\\right)\\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05676469",
+   "metadata": {},
+   "source": [
+    "Remember how we found these expressions with the chain rule?\n",
+    "\n",
+    "We will do the same thing here, with matrices.\n",
+    "\n",
+    "Let's take the matrice $W_1$ and the bias vector $b_1$ for the first layer, and the matrice $W_2$ and the bias vector $b_2$ for the second layer.\n",
+    "\n",
+    "The goal is to find the gradients of the loss function with respect to parameters of the neural network to see how they affect the loss function, so the goal is to find :\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1}, \\frac{\\partial \\mathcal{L}}{\\partial b_1}, \\frac{\\partial \\mathcal{L}}{\\partial W_2}, \\frac{\\partial \\mathcal{L}}{\\partial b_2}\n",
+    "$$\n",
+    "Where $\\mathcal{L}$ is the loss function, $W_1$ and $b_1$ are the weights and biases of the first layer, and $W_2$ and $b_2$ are the weights and biases of the second layer.\n",
+    "We will use the chain rule to find these gradients, just like we did for the perceptron model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018a2265",
+   "metadata": {},
+   "source": [
+    "Let's recall the different functions we have in the neural network:\n",
+    "\n",
+    "**For the first layer:**\n",
+    "- The model :\n",
+    "$$\n",
+    "Z_1 = W_1X + b_1\n",
+    "$$\n",
+    "> Relation betweem $Z_1$ and $W_1$.\n",
+    "- The activation function : \n",
+    "$$\n",
+    "A_1 = \\frac{1}{1 + e^{-Z_1}}\n",
+    "$$\n",
+    "> Relation betweem $A_1$ and $Z_1$.\n",
+    "\n",
+    "**For the second layer (last hidden layer):**\n",
+    "- The model :\n",
+    "$$\n",
+    "Z_2 = W_2A_1 + b_2\n",
+    "$$\n",
+    ">Relation betweem $Z_2$, $W_2 and $A_1$.\\\n",
+    ">Note how $Z_2$ is computed with the output of the first layer $A_1$ and not the input data $X$ as for $Z_1$.\n",
+    "- The activation function :\n",
+    "$$\n",
+    "A_2 = \\frac{1}{1 + e^{-Z_2}}\n",
+    "$$\n",
+    ">Relation betweem $A_2$ and $Z_2$.\n",
+    "- The loss function :\n",
+    "$$\n",
+    "\\mathcal{L} = -\\frac{1}{m} \\sum\\left(y \\log(A_2)+(1-y) \\log(1-A_2)\\right)\n",
+    "$$\n",
+    ">Relation betweem $\\mathcal{L}$ and $A_2$.\\\n",
+    ">We apply the loss function to the output of the last hidden layer $A_2$ and not the output of the first layer $A_1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8276917",
+   "metadata": {},
+   "source": [
+    "### Important\n",
+    "Finding all the gradients means identifying how $\\mathcal{L}$ relates to all the other parameters. But as you've seen here, the entry point between $\\mathcal{L}$ and all the other parameters is $A_2$. This means that even to compute the gradients of the first layer, we have to go through $A_2$ — the second layer.\n",
+    "\n",
+    "When you think about it, it actually makes perfect sense: that’s the whole point of neural networks — to pass through multiple layers in order to build complexity and give the model more \"intelligence\".\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25c61f53",
+   "metadata": {},
+   "source": [
+    "## For the the layer just before the output layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49f31b20",
+   "metadata": {},
+   "source": [
+    "With the chain rule, we can write:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial W_2}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial b_2}\n",
+    "$$\n",
+    "\n",
+    "We can see that the first term is the same for both equations, so we gonna simplyfy it by calling it $dZ_2$.\n",
+    "$$\n",
+    "dZ_2 = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2}\n",
+    "$$\n",
+    "So now we can write the equations as:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} = dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial W_2}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} = dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial b_2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5900d635",
+   "metadata": {},
+   "source": [
+    "## For the first layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fca06244",
+   "metadata": {},
+   "source": [
+    "With the chain rule, we can write:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "$$\n",
+    "As I said before, we need to go through $A_2$ to compute the gradients of the first layer because there is no direct relation between $\\mathcal{L}$ and $A_1$ !\n",
+    "\n",
+    "How can we find the relation between the second layer and the first layer?\n",
+    "\n",
+    "Easy: what is the output of the first layer and the input of the second layer?\n",
+    "\n",
+    "I'm not gonna answer, find the relation that links the two layers together.\n",
+    "\n",
+    "Take the moment to think about it.\n",
+    "\n",
+    "You have it ?\n",
+    "\n",
+    "Really ?\n",
+    "\n",
+    "Now that you just found that the relation between the two layers is through the variables $A_1 and $Z_2$, which is $Z_2 = W_2A_1 + b_2$, we developp the term $\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_1}$ with the chain rule:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1}\n",
+    "$$\n",
+    "\n",
+    "So now, the entire expression for the gradients of the first layer is:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "$$\n",
+    "\n",
+    "Which is pretty long, but I ain't gonna lie to you and saying Deep Learning is simple, otherwise everybody would be a data scientist. Oh sorry, everybody is data scientist on LinkedIn. I meant everybody would a REAL and HONEST data scientist."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3675d43f",
+   "metadata": {},
+   "source": [
+    "But still, we can simplify this a bit.\n",
+    "We can write the entire expression as:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "$$\n",
+    "Where we can see that the first term is the same for both equations, and we can factor it out:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "$$\n",
+    "Where we can see that the first term is the same for both equations, and we can factor it out:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a69e80",
+   "metadata": {},
    "source": []
   }
  ],
