--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -905,32 +905,34 @@
    "source": [
     "But still, we can simplify this a bit.\n",
     "We can write the entire expression as:\n",
+    "\n",
+    "Indeed, we can see that the first term is the same for both equations, so we gonna simplyfy it by calling it $dZ_1$.\n",
+    "\n",
+    "And we gonna simplify $dZ_1$ with $dZ_2$ !\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "\\begin{align*}\n",
+    "dZ_1 &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\\\\n",
+    "&= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1}\n",
+    "\\end{align*}\n",
     "$$\n",
+    "\n",
+    "So now we can write the equations as:\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
-    "$$\n",
-    "Where we can see that the first term is the same for both equations, and we can factor it out:\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
-    "$$\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
-    "$$\n",
-    "Where we can see that the first term is the same for both equations, and we can factor it out:\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
     "$$\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}"
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "13a69e80",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Summary of the gradient equations to find\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
