--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -826,22 +826,28 @@
     "With the chain rule, we can write:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial W_2}\n",
-    "$$\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial b_2}\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial W_2} \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial b_2}\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
     "$$\n",
     "\n",
+    "Where $\\frac{\\partial \\mathcal{L}}{\\partial A_2}$ is the gradient of the loss function with respect to the output of the last hidden layer, $\\frac{\\partial A_2}{\\partial Z_2}$ is the gradient of the activation function with respect to its input, and $\\frac{\\partial Z_2}{\\partial W_2}$ and $\\frac{\\partial Z_2}{\\partial b_2}$ are the gradients of the model with respect to the weights and biases of the second layer.\n",
     "We can see that the first term is the same for both equations, so we gonna simplyfy it by calling it $dZ_2$.\n",
+    "\n",
     "$$\n",
     "dZ_2 = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2}\n",
     "$$\n",
     "So now we can write the equations as:\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} = dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial W_2}\n",
-    "$$\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} = dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial b_2}\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial W_2} \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial b_2}\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
     "$$"
    ]
   },
@@ -860,11 +866,18 @@
    "source": [
     "With the chain rule, we can write:\n",
     "$$\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
-    "$$\n",
-    "$$\n",
+    "\\\\\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
     "$$\n",
+    "\n",
+    "Where $\\frac{\\partial \\mathcal{L}}{\\partial A_1}$ is the gradient of the loss function with respect to the output of the first layer, $\\frac{\\partial A_1}{\\partial Z_1}$ is the gradient of the activation function with respect to its input, and $\\frac{\\partial Z_1}{\\partial W_1}$ and $\\frac{\\partial Z_1}{\\partial b_1}$ are the gradients of the model with respect to the weights and biases of the first layer.\n",
+    "\n",
+    "\n",
     "As I said before, we need to go through $A_2$ to compute the gradients of the first layer because there is no direct relation between $\\mathcal{L}$ and $A_1$ !\n",
     "\n",
     "How can we find the relation between the second layer and the first layer?\n",
@@ -889,10 +902,12 @@
     "\n",
     "So now, the entire expression for the gradients of the first layer is:\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
-    "$$\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1} \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
     "$$\n",
     "\n",
     "Which is pretty long, but I ain't gonna lie to you and saying Deep Learning is simple, otherwise everybody would be a data scientist. Oh sorry, everybody is data scientist on LinkedIn. I meant everybody would a REAL and HONEST data scientist."
@@ -918,10 +933,12 @@
     "\n",
     "So now we can write the equations as:\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} = dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
-    "$$\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} = dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} &= dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial W_1} \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} &= dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
     "$$"
    ]
   },
@@ -931,8 +948,36 @@
    "metadata": {},
    "source": [
     "### Summary of the gradient equations to find\n",
-    "$$"
+    "\n",
+    "We want to compute:\n",
+    "\n",
+    "$$\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial W_2} \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial b_2} \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} &= dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial W_1} \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} &= dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
+    "$$\n",
+    "\n",
+    "With:\n",
+    "$$\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "dZ_2 &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\\\\n",
+    "dZ_1 &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1}\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
+    "$$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7667309a",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
