--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -977,6 +977,74 @@
    "cell_type": "markdown",
    "id": "7667309a",
    "metadata": {},
+   "source": [
+    "## Let's get to the point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "549566c5",
+   "metadata": {},
+   "source": [
+    "In the real world, there are no shortcuts. \\\n",
+    "\n",
+    "We have to do the work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a528534",
+   "metadata": {},
+   "source": [
+    "Let's begin with the calcul of $dZ_2$, because it appears in the two equations and we need it to compute $dZ_1$.\n",
+    "We can write the expression for $dZ_2$ as:\n",
+    "$$\n",
+    "dZ_2 = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2}\n",
+    "$$\n",
+    "Where $\\frac{\\partial \\mathcal{L}}{\\partial A_2}$ is the gradient of the loss function with respect to the output of the last hidden layer, and $\\frac{\\partial A_2}{\\partial Z_2}$ is the gradient of the activation function with respect to its input.\n",
+    "We can compute the first term as:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right)\n",
+    "$$\n",
+    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\\\n",
+    "\n",
+    "Wait... You don't remember this expression? \\\n",
+    "Maan.. it's the same expression we found in the previous notebook with the log-loss function. \\\n",
+    "\n",
+    "Okay let's quickly recap this expression.\n",
+    "The log-loss function in this neural network is defined as:\n",
+    "$$\n",
+    "\\mathcal{L} = -\\frac{1}{m} \\sum\\left(y \\log(A_2)+(1-y) \\log(1-A_2)\\right)\n",
+    "$$\n",
+    ">remember that we use the last hidden layer $A_2$ as the output of the neural network to compare the final prediction with the true label $y$.\n",
+    "\n",
+    "We can compute the gradient of the loss function with respect to the output of the last hidden layer as:\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right)\n",
+    "$$\n",
+    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
+    "This expression is the same as the one we found in the previous notebook with the log-loss function. \\\n",
+    "We can compute the second term as:\n",
+    "$$\n",
+    "\\frac{\\partial A_2}{\\partial Z_2} = A_2 \\cdot (1 - A_2)\n",
+    "$$\n",
+    "Where $A_2$ is the output of the last hidden layer.\n",
+    "So we can write the expression for $dZ_2$ as:\n",
+    "$$\n",
+    "dZ_2 = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right) \\cdot A_2 \\cdot (1 - A_2)\n",
+    "$$\n",
+    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
+    "We can simplify this expression a bit by multiplying the two terms together:\n",
+    "$$\n",
+    "dZ_2 = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right) \\cdot A_2 \\cdot (1 - A_2)\n",
+    "$$\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9c0e42a",
+   "metadata": {},
    "source": []
   }
  ],
