--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -993,6 +993,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7bd4b831",
+   "metadata": {},
+   "source": [
+    "## $dZ_2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a528534",
    "metadata": {},
    "source": [
@@ -1006,22 +1014,30 @@
     "$$\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right)\n",
     "$$\n",
-    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\\\n",
+    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
     "\n",
-    "Wait... You don't remember this expression? \\\n",
-    "Maan.. it's the same expression we found in the previous notebook with the log-loss function. \\\n",
+    "**Wait... You don't remember this expression?** \\\n",
+    "Maan.. it's the same expression we found in the previous notebook with the log-loss function. \n",
     "\n",
-    "Okay let's quickly recap this expression.\n",
-    "The log-loss function in this neural network is defined as:\n",
+    "Okay let's quickly recap this expression. But this is the only time I will recap something from previous notebook, after what I'm not gonna hold your hand anymore. I'm not your mom for god's sake.\n",
+    "> The log-loss function is a measure of how well the model's predicted probabilities match the true labels.\n",
+    "\n",
+    "Ok so the log-loss function in this neural network is defined as:\n",
     "$$\n",
-    "\\mathcal{L} = -\\frac{1}{m} \\sum\\left(y \\log(A_2)+(1-y) \\log(1-A_2)\\right)\n",
+    "\\mathcal{L} = -\\frac{1}{m} \\sum_i\\left(y_i \\log(A_2)+(1-y_i) \\log(1-A_2)\\right)\n",
     "$$\n",
-    ">remember that we use the last hidden layer $A_2$ as the output of the neural network to compare the final prediction with the true label $y$.\n",
+    ">remember that we use the predictions $A_2$ as the output of the neural network to compare these final predictions with the true labels $y_i$.\n",
     "\n",
     "We can compute the gradient of the loss function with respect to the output of the last hidden layer as:\n",
+    "> remember your log derivative rules that you forgot\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right)\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right)\\\\\n",
+    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i}{A_2} - \\frac{1-y_i}{1-A_2}\\right)\\\\\n",
+    "= -\\frac{1}{m} \\sum_i(\\frac{y_i - A_2} {A_2 \\cdot {y_i}})\\\\\n",
+    "\n",
+    "= \\frac{1}{m} \\sum_i(\\frac{A_2 - y_i} {A_2 \\cdot {y_i}})\\\\\n",
     "$$\n",
+    "\n",
     "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
     "This expression is the same as the one we found in the previous notebook with the log-loss function. \\\n",
     "We can compute the second term as:\n",
@@ -1029,6 +1045,23 @@
     "\\frac{\\partial A_2}{\\partial Z_2} = A_2 \\cdot (1 - A_2)\n",
     "$$\n",
     "Where $A_2$ is the output of the last hidden layer.\n",
+    "\n",
+    "**No way... You don't remember this expression too?**\\\n",
+    "Ok I told you I'm not gonna hold your hand anymore, but I want my notebook to be your best friend, so let's quickly recap this expression too.\n",
+    "> The activation function is a non-linear function that transforms the output of the neuron to introduce non-linearity into the model.\n",
+    "\n",
+    "The sigmoid activation function is defined as:\n",
+    "$$\n",
+    "a(z) = \\frac{1}{1 + e^{-z}}\n",
+    "$$\n",
+    "Where $a(z)$ is the activation function, and $z$ is the output of the neuron.\n",
+    "We can compute the gradient of the activation function with respect to its input as:\n",
+    "$$\n",
+    "\\frac{\\partial a(z)}{\\partial z} = a(z) \\cdot (1 - a(z))\n",
+    "$$\n",
+    "Where $a(z)$ is the output of the activation function.\n",
+    "\n",
+    "\n",
     "So we can write the expression for $dZ_2$ as:\n",
     "$$\n",
     "dZ_2 = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right) \\cdot A_2 \\cdot (1 - A_2)\n",
