--- a/notebooks/read_this_before_and_everyday.ipynb
+++ b/notebooks/read_this_before_and_everyday.ipynb
@@ -17,11 +17,11 @@
     "So be tenacious, this notebook starts now.\n",
     "\n",
     "This notebook is composed of 2 parts:\n",
-    "- **Theoretical part**: This part is composed of the theory behind deep learning. I explain the concepts in a simple way, with examples and illustrations.\\\n",
+    "- **Theoretical part**: This part is composed of the theory behind deep learning. I explain the concepts in a simple way, with examples and illustrations.\n",
     "- **Practical part**: This part is composed of the practical implementation of the theory. I explain the code in a simple way, with examples and illustrations.\n",
     "\n",
     "That's it.\\\n",
-    "Next step for you is theory_00.ipynb. So go for it, you will be amazed by what you will learn."
+    "Next step for you is **theory_00.ipynb**. So go for it, you will be amazed by what you will learn."
    ]
   },
   {
