--- a/notebooks/read_this_before_and_everyday.ipynb
+++ b/notebooks/read_this_before_and_everyday.ipynb
@@ -12,7 +12,7 @@
     "Welcome to my notebook, made by a person that has asked himself the same questions you are asking yourself right now: Wtf is Deep learning ? How does that work..? like REALLY\\\n",
     "This notebook is hard. But this notebook is also a journey. A journey that will take you from the very basics of deep learning to the advanced concepts.\n",
     "\n",
-    "But don't worry. No I am not a preacher saying that, I mean it. Why ? Because I am not a teacher, I'm like you. But mostly, don't worry because the most difficult thing is the decision to act. And you already did it; the rest is merely tenacity.\n",
+    "But don't worry. No I am not a preacher saying that, I mean it. Why ? Because I am not a teacher, I'm like you. But mostly, don't worry because the most difficult thing is the decision to act. And you just took this decision; the rest is merely tenacity.\n",
     "\n",
     "So be tenacious, this notebook starts now.\n",
     "\n",
