--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1012,7 +1012,7 @@
     "Where $\\frac{\\partial \\mathcal{L}}{\\partial A_2}$ is the gradient of the loss function with respect to the output of the last hidden layer, and $\\frac{\\partial A_2}{\\partial Z_2}$ is the gradient of the activation function with respect to its input.\n",
     "We can compute the first term as:\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right)\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = \\frac{1}{m} \\sum_i\\frac{A_2 - y_i} {A_2 \\cdot {y_i}}\n",
     "$$\n",
     "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
     "\n",
@@ -1024,7 +1024,7 @@
     "\n",
     "Ok so the log-loss function in this neural network is defined as:\n",
     "$$\n",
-    "\\mathcal{L} = -\\frac{1}{m} \\sum_i\\left(y_i \\log(A_2)+(1-y_i) \\log(1-A_2)\\right)\n",
+    "\\mathcal{L} = -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
     "$$\n",
     ">remember that we use the predictions $A_2$ as the output of the neural network to compare these final predictions with the true labels $y_i$.\n",
     "\n",
@@ -1033,13 +1033,24 @@
     "$$\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right)\\\\\n",
     "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i}{A_2} - \\frac{1-y_i}{1-A_2}\\right)\\\\\n",
-    "= -\\frac{1}{m} \\sum_i(\\frac{y_i - A_2} {A_2 \\cdot {y_i}})\\\\\n",
+    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i(1-A_2) - (1-y_i)A_2}{A_2(1-A_2)}\\right)\\\\\n",
+    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\\\\\n",
+    "$$\n",
     "\n",
-    "= \\frac{1}{m} \\sum_i(\\frac{A_2 - y_i} {A_2 \\cdot {y_i}})\\\\\n",
+    "That's why\n",
+    "$$\n",
+    "\\left[\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\\right]\n",
     "$$\n",
     "\n",
     "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
-    "This expression is the same as the one we found in the previous notebook with the log-loss function. \\\n",
+    "This expression is the same as the one we found in the previous notebook with the log-loss function. \\\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "819e9ad7",
+   "metadata": {},
+   "source": [
     "We can compute the second term as:\n",
     "$$\n",
     "\\frac{\\partial A_2}{\\partial Z_2} = A_2 \\cdot (1 - A_2)\n",
@@ -1056,22 +1067,67 @@
     "$$\n",
     "Where $a(z)$ is the activation function, and $z$ is the output of the neuron.\n",
     "We can compute the gradient of the activation function with respect to its input as:\n",
-    "$$\n",
-    "\\frac{\\partial a(z)}{\\partial z} = a(z) \\cdot (1 - a(z))\n",
-    "$$\n",
-    "Where $a(z)$ is the output of the activation function.\n",
     "\n",
+    "> remember your damn derivative rules ($\\frac{\\partial}{\\partial z} \\frac{1}{u(z)} = \\frac{-1}{u^2} \\cdot \\frac{\\partial u}{\\partial z}$), but here, there's a trick later remember ?\n",
+    "$$\n",
+    "\\frac{\\partial a(z)}{\\partial z} = \\frac{\\partial}{\\partial z} \\left(\\frac{1}{1 + e^{-z}}\\right)\\\\\n",
+    "= \\frac{-1}{(1 + e^{-z})^2} \\cdot \\frac{\\partial}{\\partial z} (1 + e^{-z})\\\\\n",
+    "= \\frac{-1}{(1 + e^{-z})^2} \\cdot (-e^{-z})\n",
+    "= \\frac{1}{1 + e^{-z}} \\cdot \\frac{e^{-z}}{1 + e^{-z}}\\\\\n",
+    "$$\n",
+    "> And now you can see that the first term is the activation function\n",
+    "$$\n",
+    "= a(z) \\cdot \\frac{e^{-z}}{1 + e^{-z}}\\\\\n",
+    "$$\n",
+    "> the trick is to bring up the activation on the second term by doing this simple trick: $e^{-z} = e^{-z} + 1 - 1$ \n",
+    "$$\n",
+    "= a(z) \\cdot \\frac{e^{-z} + 1 - 1}{1 + e^{-z}}\\\\\n",
+    "= a(z) \\cdot \\frac{1 + e^{-z}}{1 + e^{-z}} \\cdot \\frac{-1}{1 + e^{-z}}\\\\\n",
+    "$$\n",
+    "> we can see the activation again, and the whole thing is simplified to:\n",
+    "$$\n",
+    "= a(z) \\cdot (1 - a(z))\\\\\n",
+    "$$\n",
+    "Now that $A_2 = \\begin{bmatrix}\n",
+    "a(z_1) \\\\\n",
+    "a(z_2) \\\\\n",
+    "a(z_3)\n",
+    "\\end{bmatrix}$, and $dZ_2 = \\begin{bmatrix}\n",
+    "z_1 \\\\\n",
+    "z_2 \\\\\n",
+    "z_3\n",
+    "\\end{bmatrix}$, we can write the expression as:\n",
+    "$$\n",
+    "\\frac{\\partial A_2}{\\partial Z_2} = A_2 \\cdot (1 - A_2) = \\begin{bmatrix}\n",
+    "a(z_1) \\cdot (1 - a(z_1)) \\\\\n",
+    "a(z_2) \\cdot (1 - a(z_2)) \\\\\n",
+    "a(z_3) \\cdot (1 - a(z_3))\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "That's why \n",
+    "$$\n",
+    "\\left[\\frac{\\partial A_2}{\\partial Z_2} = A_2 \\cdot (1 - A_2)\\right]\n",
+    "$$\n",
+    "\n",
+    "So now we can write the expression for $dZ_2$ as:\n",
+    "$$\n",
+    "dZ_2 = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\\\\n",
+    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right) \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
+    "= -\\frac{1}{m} \\sum\\frac{y - A_2}{A_2(1-A_2)} \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
+    "= \\frac{1}{m} \\sum_m (A_2 - y)\n",
+    "= A_2 - y\n",
+    "$$\n",
+    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
+    "\n",
+    "Why can we write this : $\\frac{1}{m} \\sum_m (A_2 - y) = A_2 - y$ ?\n",
+    "\n",
+    "Let's say it's because we are working with a single sample, so the sum is equal to the sample itself. That way, no need to take the average by summing and dividing by $m$.\\\n",
+    "But we don't forget about the sum and the division by $m$: we will take care of that later when we update the model parameters.\n",
     "\n",
     "So we can write the expression for $dZ_2$ as:\n",
     "$$\n",
-    "dZ_2 = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right) \\cdot A_2 \\cdot (1 - A_2)\n",
-    "$$\n",
-    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
-    "We can simplify this expression a bit by multiplying the two terms together:\n",
-    "$$\n",
-    "dZ_2 = -\\frac{1}{m} \\left(\\frac{y}{A_2} - \\frac{1-y}{1-A_2}\\right) \\cdot A_2 \\cdot (1 - A_2)\n",
-    "$$\n",
-    "$$"
+    "\\left[dZ_2 = A_2 - y\\right]\n",
+    "$$\n"
    ]
   },
   {
