--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -986,7 +986,7 @@
    "id": "549566c5",
    "metadata": {},
    "source": [
-    "In the real world, there are no shortcuts. \\\n",
+    "In the real world, there are no shortcuts.\n",
     "\n",
     "We have to do the work."
    ]
