--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -782,22 +782,24 @@
     "\n",
     "**For the second layer (last hidden layer):**\n",
     "- The model :\n",
+    ">Relation betweem $Z_2$, $W_2 and $A_1$.\\\n",
+    ">Note how $Z_2$ is computed with the output of the first layer $A_1$ and not the input data $X$ as for $Z_1$.\n",
     "$$\n",
     "Z_2 = W_2A_1 + b_2\n",
     "$$\n",
-    ">Relation betweem $Z_2$, $W_2 and $A_1$.\\\n",
-    ">Note how $Z_2$ is computed with the output of the first layer $A_1$ and not the input data $X$ as for $Z_1$.\n",
+    "\n",
     "- The activation function :\n",
+    ">Relation betweem $A_2$ and $Z_2$.\n",
     "$$\n",
     "A_2 = \\frac{1}{1 + e^{-Z_2}}\n",
     "$$\n",
-    ">Relation betweem $A_2$ and $Z_2$.\n",
+    "\n",
     "- The loss function :\n",
+    ">Relation betweem $\\mathcal{L}$ and $A_2$.\\\n",
+    ">We apply the loss function to the output of the last hidden layer $A_2$ and not the output of the first layer $A_1$.\n",
     "$$\n",
     "\\mathcal{L} = -\\frac{1}{m} \\sum\\left(y \\log(A_2)+(1-y) \\log(1-A_2)\\right)\n",
-    "$$\n",
-    ">Relation betweem $\\mathcal{L}$ and $A_2$.\\\n",
-    ">We apply the loss function to the output of the last hidden layer $A_2$ and not the output of the first layer $A_1$."
+    "$$\n"
    ]
   },
   {
