--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -769,33 +769,33 @@
     "\n",
     "**For the first layer:**\n",
     "- The model :\n",
-    "> Relation betweem $Z_1$ and $W_1$.\n",
+    "> Relation between $Z_1$ and $W_1$.\n",
     "$$\n",
     "Z_1 = W_1X + b_1\n",
     "$$\n",
     "\n",
     "- The activation function : \n",
-    "> Relation betweem $A_1$ and $Z_1$.\n",
+    "> Relation between $A_1$ and $Z_1$.\n",
     "$$\n",
     "A_1 = \\frac{1}{1 + e^{-Z_1}}\n",
     "$$\n",
     "\n",
     "**For the second layer (last hidden layer):**\n",
     "- The model :\n",
-    ">Relation betweem $Z_2$, $W_2 and $A_1$.\n",
+    ">Relation between $Z_2$, $W_2$ and $A_1$.\n",
     ">Note how $Z_2$ is computed with the output of the first layer $A_1$ and not the input data $X$ as for $Z_1$.\n",
     "$$\n",
     "Z_2 = W_2A_1 + b_2\n",
     "$$\n",
     "\n",
     "- The activation function :\n",
-    ">Relation betweem $A_2$ and $Z_2$.\n",
+    ">Relation between $A_2$ and $Z_2$.\n",
     "$$\n",
     "A_2 = \\frac{1}{1 + e^{-Z_2}}\n",
     "$$\n",
     "\n",
     "- The loss function :\n",
-    ">Relation betweem $\\mathcal{L}$ and $A_2$.\\\n",
+    ">Relation between $\\mathcal{L}$ and $A_2$.\\\n",
     ">We apply the loss function to the output of the last hidden layer $A_2$ and not the output of the first layer $A_1$.\n",
     "$$\n",
     "\\mathcal{L} = -\\frac{1}{m} \\sum\\left(y \\log(A_2)+(1-y) \\log(1-A_2)\\right)\n",
