--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -782,7 +782,7 @@
     "\n",
     "**For the second layer (last hidden layer):**\n",
     "- The model :\n",
-    ">Relation between $Z_2$, $W_2$ and $A_1$.\n",
+    ">Relation between $Z_2$, $W_2$ and $A_1$.\\\n",
     ">Note how $Z_2$ is computed with the output of the first layer $A_1$ and not the input data $X$ as for $Z_1$.\n",
     "$$\n",
     "Z_2 = W_2A_1 + b_2\n",
